unpackaged/main/default/objects/Opportunity_SKU__c/Opportunity_SKU__c.object-meta.xml
<CustomObject>
    <description>Joining Object between Opportunity and SKU Product</description>
    <label>Opportunity SKU</label>
    <nameField>
        <displayFormat>OSKU-{000000}</displayFormat>
        <label>Opportunity SKU ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity SKU</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>