unpackaged/main/default/objects/Opportunity_SKU__c/fields/Actual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Actual_Quantity__c</fullName>
    <formula>Qty__c *  SKU_Product__r.Allocation_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the actual quantity based on the SKU Product Allocation Unit which is used as a multiplier against the Opportunity SKU Qty field.</inlineHelpText>
    <label>Actual Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>