unpackaged/main/default/objects/Opportunity_SKU__c/fields/Annual_Discount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Discount__c</fullName>
    <description>Used for Soluno Annual Discount Calculation</description>
    <formula>If( Pricing_Type__c = &quot;Annual&quot;, 
   If( Product_Sub_Family__c = &quot;Soluno&quot;, CEILING((( Total_Base__c +  Total_Tier_2__c + Total_Tier_3__c + Total_Tier_4__c + Total_Tier_5__c )* 0.15)), 0)
, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>