unpackaged/main/default/objects/Opportunity_SKU__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <formula>If ( Product_Sub_Family__c = &#39;Soluno&#39;,

  IF( ISPICKVAL ( SKU_Product__r.Pricing_Type__c , &quot;Monthly&quot;), 12, 1) 
  * 
  IF( ISPICKVAL ( SKU_Product__r.Revenue_Type__c, &quot;Recurring&quot;),1,0)  
  *
  (
  (Qty__c * Total_All_Tier_Per_User__c ) 
  -
  IF(  
  AND ( Short_Term_Discount__c &gt; 0, 
  ISPICKVAL( Short_Term_Promotion__r.Discount_Type__c, &quot;Short-Term&quot;),
  OR(
  AND( ISPICKVAL ( SKU_Product__r.Pricing_Type__c ,&quot;Monthly&quot;),Promotional_Discount_Duration__c &gt;= 12),
  AND( ISPICKVAL ( SKU_Product__r.Pricing_Type__c ,&quot;Annual&quot;), Promotional_Discount_Duration__c &gt;= 1  ))),
  (Qty__c *  Total_All_Tier_Per_User__c  *   Short_Term_Discount__c),
  IF(Lifetime_Discount__c &gt; 0,(Qty__c * Total_All_Tier_Per_User__c  *  Lifetime_Discount__c),0))
  )
,

  IF( ISPICKVAL ( SKU_Product__r.Pricing_Type__c , &quot;Monthly&quot;), 12, 1) 
  * 
  IF( ISPICKVAL ( SKU_Product__r.Revenue_Type__c, &quot;Recurring&quot;),1,0)  
  *
  (
  (Qty__c *  Price_Base__c) 
  -
  IF(  
  AND ( Short_Term_Discount__c &gt; 0, ISPICKVAL( Short_Term_Promotion__r.Discount_Type__c, &quot;Short-Term&quot;),
  OR(
  AND( ISPICKVAL ( SKU_Product__r.Pricing_Type__c ,&quot;Monthly&quot;),Promotional_Discount_Duration__c &gt;= 12),
  AND( ISPICKVAL ( SKU_Product__r.Pricing_Type__c ,&quot;Annual&quot;), Promotional_Discount_Duration__c &gt;= 1  ))),
 IF(ISPICKVAL(Discount_Value_Type__c,&quot;Fixed&quot;), (Total_Discount__c),(Qty__c *  Price_Base__c  *   Short_Term_Discount__c)),
  IF(ISPICKVAL(Discount_Value_Type__c,&quot;Fixed&quot;), (Total_Discount__c), IF(Lifetime_Discount__c &gt; 0,(Qty__c *  Price_Base__c  *  Lifetime_Discount__c),0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>