unpackaged/main/default/objects/Opportunity_SKU__c/fields/Billing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Billing_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Plan</label>
    <referenceTo>Billing_Plans__c</referenceTo>
    <relationshipLabel>Opportunity SKU</relationshipLabel>
    <relationshipName>Opportunity_SKU</relationshipName>
    <type>Lookup</type>
</CustomField>