unpackaged/main/default/objects/Opportunity_SKU__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <formula>Bundle_SKU_Product__r.Bundle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the Bundle No. related to the Bundle SKU Product</inlineHelpText>
    <label>Bundle</label>
    <type>Text</type>
</CustomField>