unpackaged/main/default/objects/Opportunity_SKU__c/fields/Bundle_SKU_Product__c.field-meta.xml
<CustomField>
    <fullName>Bundle_SKU_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle SKU Product</label>
    <referenceTo>Bundle_SKU_Product__c</referenceTo>
    <relationshipLabel>Opportunity SKU</relationshipLabel>
    <relationshipName>Opportunity_SKU</relationshipName>
    <type>Lookup</type>
</CustomField>