unpackaged/main/default/objects/Opportunity_SKU__c/fields/Changed_Contract_SKU__c.field-meta.xml
<CustomField>
    <fullName>Changed_Contract_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed Contract SKU</label>
    <referenceTo>Contract_SKU__c</referenceTo>
    <relationshipLabel>Opportunity SKU</relationshipLabel>
    <relationshipName>Opportunity_SKU</relationshipName>
    <type>Lookup</type>
</CustomField>