unpackaged/main/default/objects/Opportunity_SKU__c/fields/Commissioned_ARR__c.field-meta.xml
<CustomField>
    <fullName>Commissioned_ARR__c</fullName>
    <formula>If ( Product_Sub_Family__c = &#39;Soluno&#39;,
   
   IF( ISPICKVAL ( SKU_Product__r.Pricing_Type__c , &quot;Monthly&quot;), 12, 1) 
   * 
   IF( ISPICKVAL ( SKU_Product__r.Revenue_Type__c, &quot;Recurring&quot;),1,0)  
   *
   (
   (Qty__c * Total_All_Tier_Per_User__c ) 
   -
   (
   IF( AND ( ISPICKVAL( Short_Term_Promotion__r.Discount_Type__c, &quot;Short-Term&quot;),  
   ISPICKVAL( Short_Term_Promotion__r.Short_Term_Discount_Type__c , &quot;Sales Approved&quot;)),
   Qty__c * Total_All_Tier_Per_User__c *   Short_Term_Discount__c, 0 ) 
   *
   IF( AND( ISPICKVAL (SKU_Product__r.Pricing_Type__c , &quot;Monthly&quot;), Promotional_Discount_Duration__c &lt; 12),
   Promotional_Discount_Duration__c / 12 , 
   1)
   )
   )
,
   IF( ISPICKVAL ( SKU_Product__r.Pricing_Type__c , &quot;Monthly&quot;), 12, 1) 
   * 
   IF( ISPICKVAL ( SKU_Product__r.Revenue_Type__c, &quot;Recurring&quot;),1,0)  
   *
   (
   (Qty__c *  Price_Base__c) 
   -
   (
   IF( AND ( ISPICKVAL( Short_Term_Promotion__r.Discount_Type__c, &quot;Short-Term&quot;),  
   ISPICKVAL( Short_Term_Promotion__r.Short_Term_Discount_Type__c , &quot;Sales Approved&quot;)),
   Qty__c *  Price_Base__c  *   Short_Term_Discount__c, 0 ) 
   *
   IF( AND( ISPICKVAL (SKU_Product__r.Pricing_Type__c , &quot;Monthly&quot;), Promotional_Discount_Duration__c &lt; 12),
   Promotional_Discount_Duration__c / 12 , 
   1)
   )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissioned ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>