unpackaged/main/default/objects/Opportunity_SKU__c/fields/Discount_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value_Type__c</fullName>
    <label>Discount Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>