unpackaged/main/default/objects/Opportunity_SKU__c/fields/Discounted_Total__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Total__c</fullName>
    <label>Discounted Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>