unpackaged/main/default/objects/Opportunity_SKU__c/fields/Expected_ARR__c.field-meta.xml
<CustomField>
    <fullName>Expected_ARR__c</fullName>
    <formula>ARR__c *  Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>