unpackaged/main/default/objects/Opportunity_SKU__c/fields/History_Type__c.field-meta.xml
<CustomField>
    <fullName>History_Type__c</fullName>
    <formula>IF(
   Qty__c &gt; 0,
   &quot;Add&quot;,
   &quot;Remove&quot;
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays what is needed for the processing of the Contract SKU Transaction processing</inlineHelpText>
    <label>History Type</label>
    <type>Text</type>
</CustomField>