unpackaged/main/default/objects/Opportunity_SKU__c/fields/Integration_Queue__c.field-meta.xml
<CustomField>
    <fullName>Integration_Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Queue</label>
    <referenceTo>Integration_Queue__c</referenceTo>
    <relationshipLabel>Opportunity SKU</relationshipLabel>
    <relationshipName>Opportunity_SKU</relationshipName>
    <type>Lookup</type>
</CustomField>