unpackaged/main/default/objects/Opportunity_SKU__c/fields/Integration_Queue_Created__c.field-meta.xml
<CustomField>
    <fullName>Integration_Queue_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration Queue Created</label>
    <type>Checkbox</type>
</CustomField>