unpackaged/main/default/objects/Opportunity_SKU__c/fields/Integration_Queue_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Queue_Created_Date__c</fullName>
    <label>Integration Queue Created Date</label>
    <type>Date</type>
</CustomField>