unpackaged/main/default/objects/Opportunity_SKU__c/fields/Is_Tier_Change__c.field-meta.xml
<CustomField>
    <fullName>Is_Tier_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tier Change</label>
    <type>Checkbox</type>
</CustomField>