unpackaged/main/default/objects/Opportunity_SKU__c/fields/Legacy_Price__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Price__c</fullName>
    <description>Legacy price for historical opps</description>
    <label>Legacy Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>