unpackaged/main/default/objects/Opportunity_SKU__c/fields/Lifetime_Discount__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Discount__c</fullName>
    <label>Lifetime Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>