unpackaged/main/default/objects/Opportunity_SKU__c/fields/Lifetime_Discounted_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Discounted_Unit_Price__c</fullName>
    <formula>/*
ORIGINAL FORMULA BELOW. Added in separation for Solumno Calculations
Qty__c * Price_Base__c * (1 - Short_Term_Discount__c)

*/

If( Product_Sub_Family__c = &quot;Soluno&quot;,  Total_All_Tier_Per_User__c  * (1 -  Lifetime_Discount__c ) ,Price_Base__c * (1 -  Lifetime_Discount__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Discounted Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>