unpackaged/main/default/objects/Opportunity_SKU__c/fields/Lifetime_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lifetime Promotion</label>
    <referenceTo>Promotions__c</referenceTo>
    <relationshipLabel>Opportunity SKU</relationshipLabel>
    <relationshipName>Opportunity_SKU</relationshipName>
    <type>Lookup</type>
</CustomField>