unpackaged/main/default/objects/Opportunity_SKU__c/fields/Maximum_Sales_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Sales_Discount__c</fullName>
    <inlineHelpText>Reflects the amount of discount that the product or package selected has assigned for the SKU Product</inlineHelpText>
    <label>Maximum Sales Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>