unpackaged/main/default/objects/Opportunity_SKU__c/fields/Maximum_Sales_Discount_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Sales_Discount_Exceeded__c</fullName>
    <formula>IF(
   Maximum_SKU_Product_Discount__c &lt;   Promotion_and_Extended_Discount__c ,
   TRUE,
   FALSE
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the condition that the percentage discount extended on the record exceeds the Maximum Sales Discount on the SKU Product.</inlineHelpText>
    <label>Maximum Sales Discount Exceeded</label>
    <type>Checkbox</type>
</CustomField>