unpackaged/main/default/objects/Opportunity_SKU__c/fields/Maximum_SKU_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_SKU_Product_Discount__c</fullName>
    <formula>SKU_Product__r.Maximum_Sales_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the maximum Sales Discount from the related SKU Product</inlineHelpText>
    <label>Maximum SKU Product Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>