unpackaged/main/default/objects/Opportunity_SKU__c/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Opportunity__c ,  Opportunity__r.Name , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Link</label>
    <type>Text</type>
</CustomField>