unpackaged/main/default/objects/Opportunity_SKU__c/fields/Override_Discount_Limit__c.field-meta.xml
<CustomField>
    <fullName>Override_Discount_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Discount Limit</label>
    <type>Checkbox</type>
</CustomField>