unpackaged/main/default/objects/Opportunity_SKU__c/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Child Opportunity SKU</relationshipLabel>
    <relationshipName>Opportunity_SKU1</relationshipName>
    <type>Lookup</type>
</CustomField>