unpackaged/main/default/objects/Opportunity_SKU__c/fields/Partner_Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>Partner_Discount_Total__c</fullName>
    <formula>Qty__c * Price_Base__c * (1- Lifetime_Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Discount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>