unpackaged/main/default/objects/Opportunity_SKU__c/fields/Price_Azure__c.field-meta.xml
<CustomField>
    <fullName>Price_Azure__c</fullName>
    <formula>SKU_Product__r.Price_Azure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price - Azure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>