unpackaged/main/default/objects/Opportunity_SKU__c/fields/Price_Base__c.field-meta.xml
<CustomField>
    <fullName>Price_Base__c</fullName>
    <formula>SKU_Product__r.Price_Base__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price - Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>