unpackaged/main/default/objects/Opportunity_SKU__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <formula>TEXT( SKU_Product__r.Pricing_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the pricing type based on the SKU Product selected.</inlineHelpText>
    <label>Pricing Type</label>
    <type>Text</type>
</CustomField>