unpackaged/main/default/objects/Opportunity_SKU__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>Text(SKU_Product__r.Product_Type__c)</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>