unpackaged/main/default/objects/Opportunity_SKU__c/fields/Product_Line_Tier__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Tier__c</fullName>
    <formula>IF( INCLUDES(SKU_Product__r.Product_Tier__c, &#39;Starter&#39;), &#39;Starter,&#39;, null) +   
IF( INCLUDES(SKU_Product__r.Product_Tier__c, &#39;Pro&#39;), &#39;Pro,&#39;, null) +   
IF( INCLUDES(SKU_Product__r.Product_Tier__c, &#39;Team&#39;), &#39;Team,&#39;, null)</formula>
    <label>Product Line Tier</label>
    <type>Text</type>
</CustomField>