unpackaged/main/default/objects/Opportunity_SKU__c/fields/Product_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Type__c</fullName>
    <formula>text(SKU_Product__r.Product_Type__c)</formula>
    <label>Product Line Type</label>
    <type>Text</type>
</CustomField>