unpackaged/main/default/objects/Opportunity_SKU__c/fields/Product_Sub_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Family__c</fullName>
    <formula>Text(SKU_Product__r.Product_Sub_Family__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sub Family</label>
    <type>Text</type>
</CustomField>