unpackaged/main/default/objects/Opportunity_SKU__c/fields/Product_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Product_Subtype__c</fullName>
    <formula>TEXT( SKU_Product__r.Product_Subtype__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the product subtype value on the associated SKU Product record.</inlineHelpText>
    <label>Product Subtype</label>
    <type>Text</type>
</CustomField>