unpackaged/main/default/objects/Opportunity_SKU__c/fields/Promo_and_Extended_Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>Promo_and_Extended_Discount_Total__c</fullName>
    <formula>Qty__c *  Price_Base__c * (1 -  Promotion_and_Extended_Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo and Extended Discount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>