unpackaged/main/default/objects/Opportunity_SKU__c/fields/Promotion_and_Extended_Discount__c.field-meta.xml
<CustomField>
    <fullName>Promotion_and_Extended_Discount__c</fullName>
    <formula>Sales_Approved_Discount__c +  Promotional_Short_Term_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion and Extended Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>