unpackaged/main/default/objects/Opportunity_SKU__c/fields/Promotional_Discount_Duration__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Discount_Duration__c</fullName>
    <label>Promotional Discount Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>