unpackaged/main/default/objects/Opportunity_SKU__c/fields/Promotional_Short_Term_Discount__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Short_Term_Discount__c</fullName>
    <formula>Lifetime_Promotion__r.Discount_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotional Short-Term Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>