unpackaged/main/default/objects/Opportunity_SKU__c/fields/Qty_Base__c.field-meta.xml
<CustomField>
    <fullName>Qty_Base__c</fullName>
    <description>Used in the Soluno Price calculation process</description>
    <label>Qty - Base</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>