unpackaged/main/default/objects/Opportunity_SKU__c/fields/Quantity_Locked__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Locked__c</fullName>
    <formula>SKU_Product__r.Quantity_Locked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity_Locked</label>
    <type>Checkbox</type>
</CustomField>