unpackaged/main/default/objects/Opportunity_SKU__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <formula>TEXT( SKU_Product__r.Revenue_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the Revenue Type of the related SKU Product</inlineHelpText>
    <label>Revenue Type</label>
    <type>Text</type>
</CustomField>