unpackaged/main/default/objects/Opportunity_SKU__c/fields/Sales_Approved_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approved_Discount__c</fullName>
    <inlineHelpText>The percentage discount extended on this Opportunity SKU record per unit</inlineHelpText>
    <label>DNU Sales Approved Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>