unpackaged/main/default/objects/Opportunity_SKU__c/fields/Sales_Approved_Total__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approved_Total__c</fullName>
    <formula>/*
ORIGINAL FORMULA BELOW. Added in separation for Solumno Calculations
Qty__c *  Price_Base__c * (1 -  Sales_Approved_Discount__c )

*/

If( Product_Sub_Family__c = &quot;Soluno&quot;,  Total_All_Tiers__c  * (1 -  Sales_Approved_Discount__c ) ,Qty__c *  Price_Base__c * (1 -  Sales_Approved_Discount__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNU Sales Approved Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>