unpackaged/main/default/objects/Opportunity_SKU__c/fields/Short_Term_Discount__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Discount__c</fullName>
    <label>Short-Term Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>