unpackaged/main/default/objects/Opportunity_SKU__c/fields/Short_Term_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Short-Term Promotion record if Opportunity SKU has a Short-Term Promotion.</description>
    <label>Short-Term Promotion</label>
    <referenceTo>Promotions__c</referenceTo>
    <relationshipLabel>Opportunity SKU (Short-Term Promotion)</relationshipLabel>
    <relationshipName>Opportunity_SKU1</relationshipName>
    <type>Lookup</type>
</CustomField>