unpackaged/main/default/objects/Opportunity_SKU__c/fields/SKU_Product__c.field-meta.xml
<CustomField>
    <fullName>SKU_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Product Currency and Product must match Opportunity SKU</errorMessage>
        <filterItems>
            <field>SKU_Product__c.CurrencyIsoCode</field>
            <operation>equals</operation>
            <valueField>$Source.CurrencyIsoCode</valueField>
        </filterItems>
        <filterItems>
            <field>SKU_Product__c.Product_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SKU_Product__c</referenceTo>
    <relationshipLabel>Opportunity SKU</relationshipLabel>
    <relationshipName>Opportunity_SKU</relationshipName>
    <type>Lookup</type>
</CustomField>