unpackaged/main/default/objects/Opportunity_SKU__c/fields/Total_All_Tier_Per_User__c.field-meta.xml
<CustomField>
    <fullName>Total_All_Tier_Per_User__c</fullName>
    <formula>Total_All_Tiers__c /  Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>All Tier Total / Qty</inlineHelpText>
    <label>Total - All Tier/Per User</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>