unpackaged/main/default/objects/Opportunity_SKU__c/fields/Total_All_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Total_All_Tiers__c</fullName>
    <description>Sum of all tiers and Azure used by the Soluno pricing process</description>
    <formula>Total_Azure__c +  Total_Base__c +  Total_Tier_2__c +  Total_Tier_3__c +  Total_Tier_4__c +  Total_Tier_5__c -  Annual_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total - All Tiers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>