unpackaged/main/default/objects/Opportunity_SKU__c/fields/Total_Base__c.field-meta.xml
<CustomField>
    <fullName>Total_Base__c</fullName>
    <description>Used in the Soluno Price calculation process</description>
    <label>Total - Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>