unpackaged/main/default/objects/Opportunity_SKU__c/fields/Total_Tier_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Tier_2__c</fullName>
    <description>Used in the Soluno Price calculation process</description>
    <label>Total - Tier 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>