unpackaged/main/default/objects/Opportunity_SKU__c/fields/Total_Tier_3__c.field-meta.xml
<CustomField>
    <fullName>Total_Tier_3__c</fullName>
    <label>Total - Tier 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>