unpackaged/main/default/objects/Opportunity_SKU__c/fields/Unit_ARR__c.field-meta.xml
<CustomField>
    <fullName>Unit_ARR__c</fullName>
    <formula>ARR__c /  Qty__c</formula>
    <inlineHelpText>ARR without the quantity as a multiplier</inlineHelpText>
    <label>Unit ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>