unpackaged/main/default/objects/Opportunity_SKU__c/fields/Unit_Commissioned_ARR__c.field-meta.xml
<CustomField>
    <fullName>Unit_Commissioned_ARR__c</fullName>
    <formula>Commissioned_ARR__c /  Qty__c</formula>
    <inlineHelpText>REpresents the Commissioned ARR without the Quantity multiplier</inlineHelpText>
    <label>Unit Commissioned ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>