unpackaged/main/default/objects/Opportunity_SKU__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <formula>If ( Product_Sub_Family__c = &#39;Soluno&#39;,  Total_All_Tier_Per_User__c , Price_Base__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>