unpackaged/main/default/objects/Opportunity_SKU__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value+</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>Opportunity SKU</relationshipLabel>
    <relationshipName>Opportunity_SKU</relationshipName>
    <type>Lookup</type>
</CustomField>